--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body > 
     <div class="container">
       <textarea id="textarea" placeholder="Type your text here..."></textarea>
-      <button id="btn">LISTEN</button>
+      <input type="submit" id="btn" value="Submit" onclick="speak() ">
     </div>
     <script src="index.js"></script>
-  </body>
+  </body>~
 </html>
 
